SERVER-12515 Unable to move hashed shard key chunks created by numInitialChunks